name:                hours
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hours#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hours
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Orphans
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , yaml
                     , thyme
                     , directory
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hours
